--- a/sample/.gitignore
+++ b/sample/.gitignore
@@ -1,9 +1,8 @@
 .gradle
 /local.properties
 /.idea/
-AITAWidgetLibrary.iml
-aita-android-widget-sdk.iml
 .DS_Store
 /build
 /captures
-
+AITAWidgetSample.iml
+sample.iml
