--- a/template/app/src/main/AndroidManifest.xml
+++ b/template/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.App">
+        android:icon="@mipmap/template_ic_launcher"
+        android:label="@string/template_app_name"
+        android:theme="@style/Theme.Template">
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/template_app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
