--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -26,13 +26,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.2'
+    compile 'com.android.support:cardview-v7:22.2.1'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 
+    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.3-beta-2'
 //    compile project(':weather-widget')
 
-    compile(name:'weather-widget', ext:'aar')
-    compile 'com.android.support:support-v4:22.2.1'
+    compile(name: 'weather-widget', ext: 'aar')
     compile 'com.squareup.okhttp:okhttp:2.5.0'
 }
