--- a/sample/weather-widget/build.gradle
+++ b/sample/weather-widget/build.gradle
@@ -19,9 +19,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.3-beta-2'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.2'
 }
