--- a/template/app/build.gradle
+++ b/template/app/build.gradle
@@ -22,5 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.2'
+    compile 'com.android.support:cardview-v7:22.2.1'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+
+    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.3-beta-2'
 }
