--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -8,7 +8,7 @@ repositories {
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.aita.aitawidgetsample"
@@ -26,13 +26,14 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
 
-    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.3-beta-2'
-//    compile project(':weather-widget')
+    compile project(':weather-widget')
+//    compile(name: 'weather-widget', ext: 'aar')
 
-    compile(name: 'weather-widget', ext: 'aar')
+    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.4-beta'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
 }
