--- a/template/app/build.gradle
+++ b/template/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.aita.widgettemplate"
@@ -20,10 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
 
-    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.3-beta-2'
+    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.4-beta'
 }
