--- a/sample/weather-widget/build.gradle
+++ b/sample/weather-widget/build.gradle
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile 'com.github.appintheair:aita-android-widget-sdk:0.9.4-beta'
+    compile 'com.github.appintheair:aita-android-widget-sdk:1.0.0'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
 }
